# zeta

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.psp  NOTICE  README.md  configure.ac  meson.build  meson_config.h.in  meson_options.txt  zeta_curses.sh  zeta_sdl.sh  zeta_sdl_mingw.sh  zeta_wasm.sh
.forgejo/workflows/: build-ci.yml
.github/: Info.plist
.github/workflows/: build-ci.yml
mingw/: resources.rc
res/macos/: Info.plist  zeta.icns  zeta.sh
res/mingw/: app.manifest
scripts/: build-macos-bundle.sh  cross-darwin-arm64.txt  cross-darwin-x86_64.txt
src/: asset_loader.c  asset_loader.h  audio_shared.c  audio_shared.h  audio_stream.c  audio_stream.h  audio_writer.c  audio_writer.h  config.h  cpu.c  cpu.h  curses_glue.c  emscripten_externs.js  emscripten_glue.js  frontend_curses.c  frontend_curses_tables.c  frontend_headless.c  frontend_null.c  frontend_posix.c  frontend_psp.c  frontend_sdl.c  gif_writer.c  gif_writer.h  libemscripten_glue.js  logging.h  posix_glue.c  posix_vfs.c  posix_vfs.h  render_software.c  render_software.h  screenshot_render.c  screenshot_render.h  screenshot_writer.c  screenshot_writer.h  types.h  ui.c  ui.h  util.c  util.h  zzt.c  (+3 more)
src/psp/: frontend.c
src/sdl/: frontend.c  frontend_sdl.h  render_opengl.c  render_software.c
src/sdl2/: frontend.c  frontend_sdl.h  render_opengl.c  render_software.c
src/sdl3/: cwdprompt.c  frontend.c  frontend_sdl.h  render_opengl.c  render_software.c
tools/: bin2c.py  cross-wasm.txt  font2raw.py  psp-font2raw.py
web/: .babelrc  ZipLoader.min.js  ascii_render.js  banner.txt  header.txt  index.html  package.json  rollup.config.js  vfs.js  zeta.js  zeta_audio.js  zeta_kbdmap.js  zeta_preload.js  zeta_render.js  zeta_vfs.js  zip-loader.min.js  zzt.js  zzt_kbdmap.js  zzt_preload.js
web/res/: README.md  index.html  readme.txt  uzip.min.js  zeta_loader.js
web/src/: audio.js  emulator.js  index.js  keymap.js  render.js  storage.js  util.js  vfs.js  vfs_wrapper.js
